--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
                 background-color: rgba(255,200,100,0.5);
                 font-family: verdana;
                 font-size: 18px;
+                cursor: pointer;
+            }
+
+            .stories__item__votes {
+              margin-right: 10px;
+              border: 1px solid black;
+              border-radius: 18px;
+              padding: 5px 10px;
+              background-color: #212;
+              color: white;
             }
 
             .controls {
@@ -88,7 +98,7 @@
 
             @media (max-width: 463px) {
                 :root {
-                    --top-separator: 230px;
+                    --top-separator: 190px;
                 }
             }
 
@@ -100,7 +110,6 @@
             <div class="controls">
                 <div class="controls__container">
                     <h1 class="controls__title">Scalefast Stories</h1>
-                    <button id="action-button" class="controls__button" type="button" name="action-button">Generate</button>
                     <button id="remove-stories" class="controls__button" type="button" name="remove-stories">Clear</button>
                 </div>
             </div>
