--- a/index.html
+++ b/index.html
@@ -6,223 +6,153 @@
         <title>Scalefast Stories</title>
         <style>
 
-            :root {
-                --top-separator: 150px;
-                --page-background: rgb(240, 240, 240);
-            }
+          :root {
+              --top-separator: 150px;
+              --page-background: rgb(240, 240, 240);
+          }
 
-            * {
-                margin: 0;
-                padding: 0;
-            }
+          * {
+              margin: 0;
+              padding: 0;
+          }
 
-            body {
-                background-color: var(--page-background);
-            }
+          body {
+              background-color: var(--page-background);
+          }
 
-            .stories__item {
-                list-style: none;
-                padding: 20px;
-                border: 1px solid grey;
-                margin: 15px;
-                box-shadow: 5px 5px 5px grey;
-                background-color: rgba(255,200,100,0.5);
-                font-family: verdana;
-                font-size: 18px;
-                cursor: pointer;
-            }
+          .stories__item {
+              list-style: none;
+              padding: 20px;
+              border: 1px solid grey;
+              margin: 15px;
+              box-shadow: 5px 5px 5px grey;
+              background-color: rgba(255,200,100,0.5);
+              font-family: verdana;
+              font-size: 18px;
+              cursor: pointer;
+          }
 
-            .stories__item__votes {
-              margin-right: 10px;
-              border: 1px solid black;
-              border-radius: 18px;
-              padding: 5px 10px;
-              background-color: #212;
+          .stories__item__votes {
+            margin-right: 10px;
+            border: 1px solid black;
+            border-radius: 18px;
+            padding: 5px 10px;
+            background-color: #212;
+            color: white;
+          }
+
+          .controls {
+              position: fixed;
+              top: 0;
+              left: 0;
+              right: 0;
+              z-index: 999;
+              background-color: black;
               color: white;
-            }
+              height: var(--top-separator);
+          }
 
-            .controls {
-                position: fixed;
-                top: 0;
-                left: 0;
-                right: 0;
-                z-index: 999;
-                background-color: black;
-                color: white;
-                height: var(--top-separator);
-            }
+          .controls__container {
+              margin: 20px;
+              text-align: center;
+          }
 
-            .controls__container {
-                margin: 20px;
-                text-align: center;
-            }
+          .controls__title {
+              margin-bottom: 10px;
+              text-transform: uppercase;
+              font-size: 30px;
+              font-family: verdana;
+          }
 
-            .controls__title {
-                margin-bottom: 10px;
-                text-transform: uppercase;
-                font-size: 30px;
-                font-family: verdana;
-            }
+          .controls__button {
+              display: inline-block;
+              background-color: white;
+              border: 1px solid grey;
+              width: 200px;
+              height: 50px;
+              vertical-align: middle;
+              text-transform: uppercase;
+              font-weight: bold;
+              font-size: 16px;
+              margin: 5px;
+          }
 
-            .controls__button {
-                display: inline-block;
-                background-color: white;
-                border: 1px solid grey;
-                width: 200px;
-                height: 50px;
-                vertical-align: middle;
-                text-transform: uppercase;
-                font-weight: bold;
-                font-size: 16px;
-                margin: 5px;
-            }
+          .controls__button:hover {
+              color: white;
+              background-color: grey;
+          }
 
-            .controls__button:hover {
-                color: white;
-                background-color: grey;
-            }
+          .controls__button:active {
+              color: black;
+              background-color: white;
+              transform: translateY(4px) translateX(2px);
+          }
 
-            .controls__button:active {
-                color: black;
-                background-color: white;
-                transform: translateY(4px) translateX(2px);
-            }
+          .stories {
+              position: absolute;
+              top: var(--top-separator);
+              left: 0;
+              right: 0;
+              background-color: var(--page-background);
+          }
 
-            .stories {
-                position: absolute;
-                top: var(--top-separator);
-                left: 0;
-                right: 0;
-                background-color: var(--page-background);
-            }
-
-            @media (max-width: 463px) {
-                :root {
-                    --top-separator: 190px;
-                }
-            }
+          @media (max-width: 463px) {
+              :root {
+                  --top-separator: 190px;
+              }
+          }
 
         </style>
     </head>
     <body>
 
-        <div class="app">
-            <div class="controls">
-                <div class="controls__container">
-                    <h1 class="controls__title">Scalefast Stories</h1>
-                    <button id="remove-stories" class="controls__button" type="button" name="remove-stories">Clear</button>
-                </div>
-            </div>
-            <div class="stories">
-                <ul>
-
-                </ul>
-            </div>
-        </div>
-
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-        <script type="text/javascript">
-          var socket = io();
-          let mostVotedStories;
-          let mostVotedInterval;
-          let pointer = 0;
-          let voteRecord = {};
+        <script src="https://unpkg.com/hyperapp@0.16.0/dist/hyperapp.js"></script>
+        <script type="module">
+          const { h, app } = hyperapp
+          const socket = io()
 
-          const sendDataToServer = (data) => {
-            const dataString = JSON.stringify(data);
-            socket.emit('vote', dataString);
+          const state = {
+            title: 'Scalefast Stories',
+            stories: []
           }
 
-          const like = item => {
-            if (item && item.dataset.voted !== 'true') {
-              const storyId = item.id.replace(/^id-/, '');
-              if (!votedRecently(storyId, voteRecord)) {
-                sendDataToServer(storyId);
-                item.dataset.voted = true;
-                voteRecord[storyId] = Date.now();
-                saveOnLocalStorage('voted', voteRecord);
-              }
-            }
+          const actions = {
+            clearStories: state => ({ stories: [] }),
+            voteStory: state => story => story.voted ? console.log(`you have already voted for story '${story.text}'`) : socket.emit('vote', JSON.stringify(story)),
+            updateStory: state => updatedStory => ({ stories: state.stories.map(oldStory => oldStory.id === updatedStory.id ? { id: updatedStory.id, text: updatedStory.text, votes: updatedStory.votes, voted: true } : oldStory ) }),
+            addStory: state => story => ({ stories: [story, ...state.stories] })
           }
 
-          const votedRecently = (id, voteObject) => {
-            if (typeof voteObject[id] === 'undefined') return false;
-            const voteDate = voteObject[id];
-            if (voteDate + 24 * 60 * 60 * 1000 <= Date.now()) return false;
-            console.log(`voted for this story less than 24 hours ago`);
-            return true;
-          }
+          // Define the view using h(). Not as clean as JSX but you avoid compiling the source code:
+          const view = (state, actions) => (
+            h('main', { class: 'app' }, [
+              h('div', { class: 'controls' }, [
+                h('div', { class: 'controls__container' }, [
+                  h('h1', { class: 'controls__title' }, state.title),
+                  h('button', { class: 'controls__button', onclick: actions.clearStories }, 'Clear')
+                ])
+              ]),
+              h('div', { class: 'stories' }, [
+                h('ul', {}, state.stories.map((story, index) => h('li', { key: index, class: 'stories__item', onclick: () => { actions.voteStory(story) } }, [
+                  h('span', { class: 'stories__item__votes' }, story.votes),
+                  h('span', { class: 'stories__item__story' }, story.text)
+                ])))
+              ])
+            ])
+          )
 
-          const saveOnLocalStorage = (key, data) => {
-            if (typeof data !== 'string') data = JSON.stringify(data);
-            try {
-              localStorage.setItem(key, data)
-            } catch (e) {
-                console.log(`error on saving on local storage`);
-            }
-          }
+          // This way you expose actions that need to be binded to global objects / events / libraries:
+          const { updateStory, addStory } = app({
+            state,
+            view,
+            actions
+          })
 
-          const getFromLocalStorage = key => {
-            try {
-              let data = localStorage.getItem(key);
-              data = JSON.parse(data);
-              if (data === null) data = {};
-              return data;
-            } catch (e) {
-              console.log(`error on getting data from local storage`);
-            }
-          }
+          // Binding socket events to actions:
+          socket.on('vote', storyString => updateStory(JSON.parse(storyString)))
+          socket.on('story', storyString => addStory(JSON.parse(storyString)))
 
-          const printStory = storyString => {
-            console.log(`printStory: ${storyString}`);
-            const story = JSON.parse(storyString);
-            const storiesContainer = document.querySelector('.stories ul');
-            const storyHtml = document.createElement('li');
-            storyHtml.id = 'id-'+ story._id;
-            storyHtml.dataset.date = story.creation_date;
-            storyHtml.className = 'stories__item';
-            storyHtml.addEventListener('click', function() {
-              like(storyHtml);
-            }, false);
-            storyHtml.innerHTML = `<span class="stories__item__votes">${story.votes}</span><span class="stories__item__story">${story.text}</span>`;
-            storiesContainer.insertBefore(storyHtml, storiesContainer.firstChild);
-          }
-
-          const updateStory = storyString => {
-            console.log(`updateStory: ${storyString}`);
-            const story = JSON.parse(storyString);
-            const storyVotes = document.querySelector(`#id-${story._id} .stories__item__votes`);
-            if (storyVotes) storyVotes.innerText = story.votes;
-          }
-
-          const removeStories = () => {
-            document.querySelector('.stories').innerHTML = '<ul></ul>';
-            mostVotedStories = [];
-          }
-
-          const mostVotedHandler = storiesArray => {
-            if (Array.isArray(mostVotedStories) && mostVotedStories.length > 0) {
-              console.log('most voted stories data is already set');
-            } else {
-              mostVotedStories = JSON.parse(storiesArray);
-              clearInterval(mostVotedInterval);
-              mostVotedInterval = setInterval(() => {
-                printStory(JSON.stringify(mostVotedStories[pointer]));
-                pointer++;
-                if (pointer >= mostVotedStories.length) pointer = 0;
-              }, 20 * 1000);
-            }
-          }
-
-          document.addEventListener('DOMContentLoaded', () => {
-            document.querySelector('#remove-stories').addEventListener('click', removeStories, false);
-            voteRecord = getFromLocalStorage('voted');
-            socket.on('story', printStory);
-            socket.on('vote', updateStory);
-            socket.on('most-voted-stories', mostVotedHandler);
-          });
-
-          console.log('%cWelcome to Scalefast Stories :) Happy hacking!', 'background-color: #111; color: #fff; padding: 10px; line-height: 50px; font-size: 30px; font-family: arial;');
         </script>
     </body>
 </html>
